--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "archiver": "^7.0.1",
     "vue": "^3.4.31",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
