--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "terser": "^5.39.0",
     "vite": "^5.3.4",
     "vite-plugin-css": "^1.0.4"
   }
